syntax = "proto3";
import "Enum.proto";

message CostConfigResMsg
{
    uint32 Id = 1;
    CostItemType CostType = 2;
    ObjectType ObjType = 3;
    string AttrName = 4;
    uint32 AttrValue = 5;
}
message CostConfigResMapMsg
{
   map<uint32, CostConfigResMsg> Map = 1;
}

message HeroResMsg
{
    uint32 Id = 1;
    string Name = 2;
    ItemType ItemType = 3;
    repeated string Rewards = 4;
    map<int32, string> DicTest = 5;
    repeated int32 Rewards2 = 6;
    repeated uint32 Rewards3 = 7;
}
message HeroResMapMsg
{
   map<uint32, HeroResMsg> Map = 1;
}

message ItemResMsg
{
    uint32 Id = 1;
    string Name = 2;
    ItemType ItemType = 3;
    repeated string Rewards = 4;
    map<int32, string> DicTest = 5;
}
message ItemResMapMsg
{
   map<uint32, ItemResMsg> Map = 1;
}

message ViewConfigResMsg
{
    string Type = 1;
    string Name = 2;
}
message ViewConfigResMapMsg
{
   map<string, ViewConfigResMsg> Map = 1;
}
